# gitLogParser

./: README.md  gitLogParser.cabal
src/: Main.hs  gitLogParser.hs
