name:                gitLogParser
version:             0.1.0.0
synopsis:            gitLogParser
description:         Please see README.md
homepage:            http://github.com/ans7991/gitLogParser#readme
license:             BSD3
license-file:        LICENSE
author:              anshulrastogi
maintainer:          anshulr@thoughtworks.com
copyright:           2015 Anshul Rastogi
category:            Parser
build-type:          Simple
cabal-version:       >=1.10

executable gitLogParser
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       parsec
